<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">On The Fly!</string>
    <string name="action_about">About</string>
    <string name="ViewButton">View Button</string>
    <string name="ReserveButton">Reserve Button</string>
    <string name="Title">Get Started</string>
    <string name="Dining">View the dining room to see if any tables are available.</string>
    <string name="Reserve">Make a reservation to avoid the long wait.</string>

    <color name="background">#CC6600</color>

    <string name="title_activity_view_activity2">ViewActivity2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>