<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/background"
    android:id="@+id/layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Title"
        android:id="@+id/Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_margin="10dp"
        android:text="@string/Dining"
        android:id="@+id/Dining"
        android:layout_below="@+id/Title"
        android:layout_alignRight="@+id/Title"
        android:layout_alignEnd="@+id/Title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_margin="10dp"
        android:text="@string/Reserve"
        android:id="@+id/Reserve"
        android:layout_below="@+id/Dining"
        android:layout_alignRight="@+id/Title"
        android:layout_alignEnd="@+id/Title" />


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:padding="6dp"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/ViewButton"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/reserve"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/ReserveButton"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_weight="1" />

    </LinearLayout>
</RelativeLayout>
